# little-games-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/Tetris/: CMakeLists.txt
app/Tetris/inc/: Coor.h  DisplayWidget.h  NextShape.h  Shape.h  button.h  mainwindow.h  scorewidget.h  shape_factory.h
app/Tetris/src/: Button.h  Coor.cpp  Coor.h  DisplayWidget.cpp  DisplayWidget.h  NextShape.cpp  NextShape.h  ScoreWidget.cpp  ScoreWidget.h  Shape.cpp  Shape.h  ShapeController.cpp  ShapeController.h  ShapeFactory.cpp  ShapeFactory.h  ShapeStore.cpp  ShapeStore.h  button.cpp  main.cpp  mainwindow.cpp  mainwindow.h  scorewidget.cpp
